Fixed spacing

--- a/css/theme.css
+++ b/css/theme.css
@@ -478,9 +478,7 @@ body > .header .logo {
   margin: 10px;
   float: left;
 }
-
 .marketplace-app-info-icon {
-  float: left;
   font-size: 3.5em;
   text-align: center;
   width: 100%;
@@ -490,6 +488,7 @@ body > .header .logo {
 }
 .marketplace-app-info-rating {
   width: 100%;
+  padding-top: 5px;
 }
 .marketplace-app-info-price {
   width: 100%;
